removed compilation warnings: use of internal API
removed compilation warnings:

[WARNING] src/test/java/org/aeonbits/owner/examples/EncryptedPropertiesExample.java:[5,16] sun.misc.BASE64Decoder is internal proprietary API and may be removed in a future release
[WARNING] src/test/java/org/aeonbits/owner/examples/EncryptedPropertiesExample.java:[28,43] sun.misc.BASE64Decoder is internal proprietary API and may be removed in a future release